<resources>
    <string name="app_name">UmisLite Pro</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_knowledge">Today\'s Knowledge</string>
    <string name="events">Events</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="schools">SCHOOLS</string>
    <string name="facilities">FACILITIES</string>
    <string name="special">SPECIAL</string>
    <string name="selected">SELECTED</string>
    <string name="to_do">TO-DO</string>
    <string name="action_settings">Action Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
