<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/discover"
            android:icon="@drawable/ic_discover"
            android:title="@string/discover" />

        <item
            android:id="@+id/courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses" />

        <!--<item-->
            <!--android:id="@+id/profile"-->
            <!--android:icon="@drawable/ic_profile"-->
            <!--android:title="@string/profile" />-->

        <item
            android:id="@+id/more"
            android:icon="@drawable/ic_more"
            android:title="@string/more" />

    </group>

</menu>